[package]
name = "org-memory-registry"
version = "0.1.0"
description = "Origin OS Memory Registry - Unified memory substrate for AI agents on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "org_memory_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.0"
solana-program = "2"
